Fixed nav z-index

--- a/assets/style/cmps/AppHeader.css
+++ b/assets/style/cmps/AppHeader.css
@@ -11,6 +11,7 @@
 } */
 
 .header-nav {
+  z-index: 1;
   display: grid;
   grid-template-columns: 1fr 1fr ;
   width: 300px;
